tests/NormalTests/paczka1/fuzzy1/36246000.err
Error in line 12: qyaCeajsBU S57 2,8
Error in line 13: qyaCeajsBU A94 82,4
Error in line 11: gQjVRCy S746 58,1
Error in line 31: qiGcXC S57 2,6
